# Tucil1_13524051

./: CMakeLists.txt  README.md
src/: file.cpp  file.h  fileproc.cpp  fileproc.h  imgproc.cpp  imgproc.h  main.cpp  queen.cpp  queen.h
test/: file2.txt  file3.txt  file4.txt  file5.txt  file6.txt  solTxt_img2.txt  solTxt_img3.txt
